# MLOps_ODS_2024

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
src/: main.py
